--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			</ul>
 		</section>
 	</div>
-	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
