--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 		<section class="input-section">
-			<input id="ingredient" type="text" placeholder="Enter a name of a food or anything...">
+			<input id="ingredient" type="text" placeholder="Name of a food or anything...">
 			<select name="cuisines" id="cuisine-name">
 				<option disabled selected value="choose cuisine">Please choose a Cuisine</option>
 				<option value="african">African</option>
