--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!--Created and modified by Hieu Nguyen-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Global Recipes w/REstrcition Allergies</title>
+	<title>Global Recipes w/Restrcition Allergies</title>
 	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
@@ -14,7 +15,7 @@
 	<div class="background-image"></div>
 	<div id="wrapper">
 		<header class="heading">
-			<h1>Global Recipes with REstriction Allergies Search Box</h1>
+			<h1>Global Recipes with Restriction Allergies Search Box</h1>
 			<p> This SUPREME food application has MANY things you that can MEET YOUR NEEDS. A recipe in mind, a specific cursines  If you have a recipe in mind, search directly by name leaving out the Cuisine dropdown menu. If you want to search recipes by cuisine, leave the field blank, choose a cuisine or a variety of each inputs and click on Search button.</p>
 			<p>Be shocked and enjoy a variety of recipes that meets your needs!!</p>
 		</header>
