fixed a small error

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<input type='checkbox' name='allergy' class='checkbox' value='400^Soy-Free' />Soy-Free
 					<input type='checkbox' name='allergy' class='checkbox' value='401^Sulfite-Free' />Sulfite-Free
 					<input type='checkbox' name='allergy' class='checkbox' value='395^Tree Nut-Free' />Tree Nut-Free
-					<input type='checkbox' name='allergy' class='checkbox' value='392^Wheat-Free"' />Wheat-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='392^Wheat-Free' />Wheat-Free
 				</div>
 			</div>
 		<section class="input-section">
