This is a new commit for what I originally planned to be amended

--- a/index.html
+++ b/index.html
@@ -15,23 +15,45 @@
 	<div class="background-image"></div>
 	<div id="wrapper">
 		<header class="heading">
-			<h1>Global Recipes with Restriction Allergies Search Box</h1>
-			<p> This SUPREME food application has MANY things you that can MEET YOUR NEEDS. A recipe in mind, a specific cursines  If you have a recipe in mind, search directly by name leaving out the Cuisine dropdown menu. If you want to search recipes by cuisine, leave the field blank, choose a cuisine or a variety of each inputs and click on Search button.</p>
-			<p>Be shocked and enjoy a variety of recipes that meets your needs!!</p>
+			<h1>Global Recipes Search</h1>
+			<p> Find ANY Recipes to meet your Allegies Needs in different cursine!!!!</p>
 		</header>
 		<div id="container">
 			<label>Allergies:</label>
 				<div id='row-results'>
-					<input type='checkbox' name='allergy' class='checkbox' value='396^Dairy-Free' />Dairy-Free
-					<input type='checkbox' name='allergy' class='checkbox' value='397^Egg-Free' />Egg-Free
-					<input type='checkbox' name='allergy' class='checkbox' value='393^Gluten-Free' />Gluten-Free
-					<input type='checkbox' name='allergy' class='checkbox' value='394^Peanut-Free' />Peanut-Free
-					<input type='checkbox' name='allergy' class='checkbox' value='398^Seafood-Free' />Seafood-Free
-					<input type='checkbox' name='allergy' class='checkbox' value='399^Sesame-Free' />Sesame-Free
-					<input type='checkbox' name='allergy' class='checkbox' value='400^Soy-Free' />Soy-Free
-					<input type='checkbox' name='allergy' class='checkbox' value='401^Sulfite-Free' />Sulfite-Free
-					<input type='checkbox' name='allergy' class='checkbox' value='395^Tree Nut-Free' />Tree Nut-Free
-					<input type='checkbox' name='allergy' class='checkbox' value='392^Wheat-Free' />Wheat-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='396^Dairy-Free' />
+					<img src= "http://i.imgur.com/sh30nFK.png" height="35" width="35" />
+					Dairy-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='397^Egg-Free' />
+					<img src= "http://i.imgur.com/J6eU9Kx.png" height="38" width="38" />
+					Egg-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='393^Gluten-Free' />
+					<img src= "http://i.imgur.com/JPcFrkp.png" height="40" width="40" />
+					Gluten-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='394^Peanut-Free' />
+					<img src= "http://i.imgur.com/7RE0cSY.png" height="40" width="40" />
+					Peanut-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='398^Seafood-Free'
+					/>
+					<img src= "http://i.imgur.com/P3IxB3T.png" height="40" width="40" />
+					Seafood-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='399^Sesame-Free' />
+					<img src= "http://i.imgur.com/Tj8f7DD.png" height="40" width="40" />
+					Sesame-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='400^Soy-Free' />
+					<img src= "http://i.imgur.com/rJdVkga.png" height="40" width="40" />
+					Soy-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='401^Sulfite-Free'
+					/>
+					<img src= "http://i.imgur.com/ClmkPYK.png" height="40" width="40" />
+					Sulfite-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='395^Tree Nut-Free'
+					 />
+					<img src= "http://i.imgur.com/BgnltZz.png" height="40" width="40" />
+					 Tree Nut-Free
+					<input type='checkbox' name='allergy' class='checkbox' value='392^Wheat-Free' />
+					<img src= "http://i.imgur.com/q172zYn.png" height="40" width="40" />
+					Wheat-Free
 				</div>
 			</div>
 		<section class="input-section">
