change buttons and also added a few new styles

--- a/index.html
+++ b/index.html
@@ -50,47 +50,33 @@
 				<option value="thai">Thai</option>
 				<option value="vietnamese">Vietnamese</option>
 			</select>
-			<button id="searchButton" class="search">Search</button>
 		</section>
 		</header>	
 		<div id="wrapper">
 		<div id="container">
 				<div id='row-results'>
-					<input type='checkbox' name='allergy' class='checkbox' value='396^Dairy-Free' />
 					<img src= "http://i.imgur.com/sh30nFK.png" height="45" width="45" />
-					<label>Dairy-Free</label>
-					<input type='checkbox' name='allergy' class='checkbox' value='397^Egg-Free' />
+					<label class='allergy' id='396^Dairy-Free'>Dairy-Free</label>
 					<img src= "http://i.imgur.com/J6eU9Kx.png" height="40" width="40" />
-					<label>Egg-Free</label>
-					<input type='checkbox' name='allergy' class='checkbox' value='393^Gluten-Free' />
+					<label class='allergy' id='397^Egg-Free'>Egg-Free</label>
 					<img src= "http://i.imgur.com/JPcFrkp.png" height="40" width="40" />
-					<label>Gluten-Free</label>
-					<input type='checkbox' name='allergy' class='checkbox' value='394^Peanut-Free' />
-					<img src= "http://i.imgur.com/7RE0cSY.png" height="40" width="40" />
-					<label>Peanut-Free</label>
-					<input type='checkbox' name='allergy' class='checkbox' value='398^Seafood-Free'
-					/>
+					<label class='allergy' id='393^Gluten-Free'>Gluten-Free</label>					         <img src= "http://i.imgur.com/7RE0cSY.png" height="40" width="40" />
+					<label class='allergy' id='394^Peanut-Free'>Peanut-Free</label>
 					<img src= "http://i.imgur.com/kU1dgn7.png" height="40" width="40" />
-					<label>Seafood-Free</label>
-					<input type='checkbox' name='allergy' class='checkbox' value='399^Sesame-Free' />
+					<label class='allergy' id='398^Seafood-Free'>Seafood-Free</label>
 					<img src= "http://i.imgur.com/Tj8f7DD.png" height="40" width="40" />
-					<label>Sesame-Free</label>
-					<input type='checkbox' name='allergy' class='checkbox' value='400^Soy-Free' />
+					<label class='allergy' id='399^Sesame-Free'>Sesame-Free</label>
 					<img src= "http://i.imgur.com/rJdVkga.png" height="40" width="40" />
-					<label>Soy-Free</label>
-					<input type='checkbox' name='allergy' class='checkbox' value='401^Sulfite-Free' />
+					<label class='allergy' id='400^Soy-Free'>Soy-Free</label>
 					<img src= "http://i.imgur.com/ClmkPYK.png" height="40" width="40" />
-					<label>Sulfite-Free</label>
-					<input type='checkbox' name='allergy' class='checkbox' value='395^Tree Nut-Free' />
+					<label class='allergy' id='401^Sulfite-Free'>Sulfite-Free</label>
 					<img src= "http://i.imgur.com/BgnltZz.png" height="40" width="40" />
-					<label>Tree Nut-Free</label>
-					<input type='checkbox' name='allergy' class='checkbox' value='392^Wheat-Free' />
+					<label class='allergy' id='395^Tree Nut-Free'>Tree Nut-Free</label>
 					<img src= "http://i.imgur.com/q172zYn.png" height="40" width="40" />
-					<label>Wheat-Free</label>
+					<label class='allergy' id='392^Wheat-Free'>Wheat-Free</label>
 				</div>
-			
 			</div>
-		
+		<button id="searchButton" class="search">Search</button>
 		<section class="recipe-list">
 			<ul class="recipe-details">
 			</ul>
