fixed whole recipe card

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 					<img src= "http://i.imgur.com/J6eU9Kx.png" height="40" width="40" />
 					<label class='allergy' id='397^Egg-Free'>Egg-Free</label>
 					<img src= "http://i.imgur.com/JPcFrkp.png" height="40" width="40" />
-					<label class='allergy' id='393^Gluten-Free'>Gluten-Free</label>					         <img src= "http://i.imgur.com/7RE0cSY.png" height="40" width="40" />
+					<label class='allergy' id='393^Gluten-Free'>Gluten-Free</label>					
+					<img src= "http://i.imgur.com/7RE0cSY.png" height="40" width="40" />
 					<label class='allergy' id='394^Peanut-Free'>Peanut-Free</label>
 					<img src= "http://i.imgur.com/kU1dgn7.png" height="40" width="40" />
 					<label class='allergy' id='398^Seafood-Free'>Seafood-Free</label>
