--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  		<meta property="og:type" content="website" />
 		<meta property="og:title" content="World Recipes" />
  		<meta property="og:description" content="site description"/>
- 		<meta property="og:image" content="images/api-cap.jpg" />
+ 		<meta property="og:image" content="http://imgur.com/A8QlOOT" />
  		<meta property="og:image:width" content="500" />
  		<meta property="og:image:height" content="400" />
 	<title>World Recipes</title>
