--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta property="og:title" content="World Recipes" />
  		<meta property="og:description" content="site description"/>
  		<meta property="og:image" content="http://i.imgur.com/A8QlOOT.jpg" />
+	  	<meta property="og:url" content="https://hnnguyen45thinkful.github.io/API-Capstone-Final/" />
  		<meta property="og:image:width" content="500" />
  		<meta property="og:image:height" content="400" />
 	<title>World Recipes</title>
