--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <html lang="en">
 <head>
 		<meta charset="UTF-8">
+		<meta name="description" content="API Capstone">
+ 		<meta name="author" content="Hieu Nguyen">
+     		<meta property="og:locale" content="en_US" />
+ 		<meta property="og:type" content="website" />
+     		<meta property="og:title" content="World Recipes"/>
+    		<meta property="og:description" content="A world recipe generator of different allergies. "/>
+    		<meta property="og:image" content="http://i.imgur.com/A8QlOOT.jpg">
+     		<meta property="og:image:width" content="500" />
+     		<meta property="og:image:height" content="400" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<meta name="description" content="API-Capstone-World Recipes">
- 		<meta name="author" content="Hieu Nguyen">
- 		<meta property="og:locale" content="en_US" />
- 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="World Recipes" />
- 		<meta property="og:description" content="site description"/>
- 		<meta property="og:image" content="http://i.imgur.com/A8QlOOT.jpg" />
-	  	<meta property="og:url" content="https://hnnguyen45thinkful.github.io/API-Capstone-Final/" />
- 		<meta property="og:image:width" content="500" />
- 		<meta property="og:image:height" content="400" />
 	<title>World Recipes</title>
 	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 	<script src="https://code.jquery.com/jquery.min.js"></script>
