--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
  		<meta property="og:type" content="website" />
      		<meta property="og:title" content="World Recipes"/>
     		<meta property="og:description" content="A world recipe generator of different allergies. "/>
+	    	<meta property="og:url" content="https://hnnguyen45thinkful.github.io/API-Capstone-Final/" />
     		<meta property="og:image" content="http://i.imgur.com/A8QlOOT.jpg">
      		<meta property="og:image:width" content="500" />
      		<meta property="og:image:height" content="400" />
