--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 		<meta property="og:title" content="API-Capstone-World Recipes"/>
-		<meta property="og:image" content="http://imgur.com/A8QlOOT"/>
+		<meta property="og:image" content="http://i.imgur.com/A8QlOOT.jpg"/>
 		<meta property="og:site_name" content="API-Capstone-World Recipes"/>
 		<meta property="og:description" content="API-Capstone-World Recipes"/>
 		<meta charset="UTF-8">
