--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta property="og:title" content="World Recipes" />
+  <meta property="og:description" content="API-Capstone-World Recipes" />
+  <meta property="og:url" content="https://hnnguyen45thinkful.github.io/API-Capstone-Final/" />
+  <meta property="og:image" content="http://i.imgur.com/A8QlOOT.jpg" />
 		<meta charset="UTF-8">
-		<meta property="og:title" content="https://hnnguyen45thinkful.github.io/API-Capstone-Final/" />  
-    <meta property="og:image" content="http://i.imgur.com/A8QlOOT.jpg" />
-    <meta property="og:description" content="API Capstone-World Recipes." />
-    <meta property="og:type" content="website"> 
-    <meta property="og:url" content="https://hnnguyen45thinkful.github.io/API-Capstone-Final/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>World Recipes</title>
 	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
