--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-		<meta property="og:title" content="API-Capstone-World Recipes"/>
-		<meta property="og:image" content="http://i.imgur.com/A8QlOOT.jpg"/>
-		<meta property="og:site_name" content="API-Capstone-World Recipes"/>
-		<meta property="og:description" content="API-Capstone-World Recipes"/>
+  <meta property="og:title" content="World Recipes" />
+  <meta property="og:description" content="API-Capstone-World Recipes" />
+  <meta property="og:url" content="https://hnnguyen45thinkful.github.io/API-Capstone-Final/" />
+  <meta property="og:image" content="http://i.imgur.com/A8QlOOT.jpg" />
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>World Recipes</title>
