added meta image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta property="og:title" content="World Recipes" />
   <meta property="og:description" content="API-Capstone-World Recipes" />
   <meta property="og:url" content="https://hnnguyen45thinkful.github.io/API-Capstone-Final/" />
-  <meta property="og:image" content="http://i.imgur.com/A8QlOOT.jpg" />
+  <meta property="og:image" content="https://hnnguyen45thinkful.github.io/API-Capstone-Final/images/api-cap.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 	<script src="https://code.jquery.com/jquery.min.js"></script>
